Added logout action, make ajax send data with csrf.

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -36,14 +36,14 @@
             </ul>
             <h1 class="stu-logo"><a href="/" title="深圳大学学子天地——荔园校园传媒资讯网" class="stu-logo">深圳大学学子天地</a></h1>
             <div class="header-bottom">
-            
+            {% include 'account/me.html' %}
             </div>
         </div>
     </div>
     <!-- 版头 End -->
     {% endblock %}
     
-    {% block content %}    
+    {% block content %}
     {% endblock %}
     <!-- 友情链接 Begin -->
     <!--
